openshift_templates/backend-deployment-config.yaml
#################################
### Backend Deployment Config ###
#################################
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: backend
  labels:
    deploymentConfig: backend
    application: backend
spec:
  replicas: 1
  selector:
    deploymentConfig: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        deploymentConfig: backend
        application: backend
      name: backend
    spec:
      containers:
        - name: backend
          image: backend
          imagePullPolicy: Always
          ports:
            - name: backend-http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 10
          resources: {}
          terminationMessagePath: /dev/termination-log
          securityContext:
            capabilities: {}
            privileged: false
      restartPolicy: Always
      dnsPolicy: ClusterFirst
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - backend
        from:
          kind: ImageStreamTag
          name: backend:latest
    - type: ConfigChange
